@@ -17,8 +17,9 @@
    specific language governing permissions and limitations
    under the License.    
 -->
-<ivy-module version="1.0">
-    <info 
+<ivy-module version="2.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+       xsi:noNamespaceSchemaLocation="http://ant.apache.org/ivy/schemas/ivy.xsd">
+    <info
         organisation="@ORGANISATION@"
         module="@MODULE@"
         status="@STATUS@">
